sjengida/c3/Rook
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/Rook/src/neval.c:773:7: error: use of undeclared identifier 'dword_66859C'
v5 = &dword_66859C[v2]; 
      ^
/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/Rook/src/neval.c:831:7: error: use of undeclared identifier 'Rook_square_d1'
v19 = Rook_square_d1[c]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O3/sjeng-clang-O3/Rook/src/obj/neval.o] Error 1
